basic gulp file set up and functional

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,8 +18,8 @@
 @import '3_layouts/sidebar.scss';
 @import '3_layouts/footer.scss';
 
-// 04 - Modules
-@import '4_modules/*.scss';
+// // 04 - Modules
+// @import '4_modules/*.scss';
 
-// 05 - Templates
-@import '5_templates/*.scss';
+// // 05 - Templates
+// @import '5_templates/*.scss';
